--- a/instagram/app/src/main/res/layout/activity_main.xml
+++ b/instagram/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -39,14 +38,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context="Main.Presentation.MainActivity">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <FrameLayout
                 android:id="@+id/main_fragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:layout="@layout/fragment_main_gallery" />
+                android:layout_height="match_parent" />
 
             <android.widget.ProgressBar
                 android:id="@+id/main_progress"
