--- a/instagram/app/src/main/res/layout/fragment_register_photo.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_photo.xml
@@ -13,9 +13,9 @@
         android:layout_height="120dp"
         android:layout_gravity="center"
         android:layout_marginBottom="24dp"
-        app:civ_border_width="0dp"
+        android:src="@drawable/photo_icon"
         app:civ_border_color="@color/colorAccent"
-        android:src="@drawable/photo_icon" />
+        app:civ_border_width="0dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         style="@style/InstaTextViewBaseForm"
