--- a/instagram/app/src/main/res/layout/item_post_list.xml
+++ b/instagram/app/src/main/res/layout/item_post_list.xml
@@ -49,11 +49,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/red"
+        android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/home_container_user_profile"
-        />
+        tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
         android:id="@+id/home_container_user_comment"
@@ -82,14 +83,18 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/home_image_caption"
         style="@style/InstaTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:maxLines="3"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:text="@string/agree_terms_policy"
+        android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/home_container_user_comment" />
