--- a/instagram/app/src/main/res/drawable/strings.xml
+++ b/instagram/app/src/main/res/drawable/strings.xml
@@ -1,61 +1,63 @@
-<resources>
-    <string name="app_name">Instagram</string>
-    <string name="email">Email</string>
-    <string name="password">Senha</string>
-    <string name="enter">Entrar</string>
-    <string name="or">ou</string>
-    <string name="enter_with_facebook">Entrar com o Facebook</string>
-    <string name="does_not_have_account">Não tem uma conta?
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <string android:name="app_name">Instagram</string>
+    <string android:name="email">Email</string>
+    <string android:name="password">Senha</string>
+    <string android:name="enter">Entrar</string>
+    <string android:name="or">ou</string>
+    <string android:name="enter_with_facebook">Entrar com o Facebook</string>
+    <string android:name="does_not_have_account">Não tem uma conta?
         <b>
-            <font color="#000000">Cadastre-se.</font>
+            <font android:color="#000000">Cadastre-se.</font>
         </b>
     </string>
-    <string name="already_has_account">Já tem uma conta?
+    <string android:name="already_has_account">Já tem uma conta?
         <b>
-            <font color="#000000">Faça login.</font>
+            <font android:color="#000000">Faça login.</font>
         </b>
     </string>
-    <string name="title_activity_register">RegisterActivity</string>
-    <string name="action_settings">Settings</string>
-    <string name="next">Avançar</string>
-    <string name="name">Nome</string>
-    <string name="password_confirm">Confirmar senha</string>
-    <string name="continuee">Continuar</string>
-    <string name="agree_terms_policy">Ao clicar em Avançar, você concorda com nossos
+    <string android:name="title_activity_register">RegisterActivity</string>
+    <string android:name="action_settings">Settings</string>
+    <string android:name="next">Avançar</string>
+    <string android:name="name">Nome</string>
+    <string android:name="password_confirm">Confirmar senha</string>
+    <string android:name="continuee">Continuar</string>
+    <string android:name="agree_terms_policy">Ao clicar em Avançar, você concorda com nossos
         <b>Termos, Política de Dados e Política de Cookies.</b>
     </string>
-    <string name="welcome_to_instagram"><b>BEM-VINDO AO INSTAGRAM,\n%1$s</b>\nEncontre pessoas para
+    <string android:name="welcome_to_instagram"><b>BEM-VINDO AO INSTAGRAM,\n%1$s</b>\nEncontre
+        pessoas para
         seguir e comece a compartilhar fotos. Você pode alterar seu nome de usuário a qualquer
         momento.
     </string>
-    <string name="photo_register_subtitle">Adicione uma foto do perfil para que seus amigos saibam
+    <string android:name="photo_register_subtitle">Adicione uma foto do perfil para que seus amigos
+        saibam
         que é você.
     </string>
-    <string name="photo_register_title">Adicionar foto do perfil</string>
-    <string name="take_picture">Tirar foto</string>
-    <string name="search_gallery">Escolher na Biblioteca</string>
-    <string name="define_photo_profile">Definir uma foto do perfil</string>
-    <string name="jump">Pular</string>
-    <string name="add_photo">Adicionar uma foto</string>
-    <string name="home">Home</string>
-    <string name="posts">publicações</string>
-    <string name="followers">seguidores</string>
-    <string name="following">seguindo</string>
-    <string name="edit_profile">Editar perfil</string>
-    <string name="username">username</string>
-    <string name="invalid_email">Email inválido</string>
-    <string name="password_not_equal">Senha e confirmar senha devem ser iguais.</string>
-    <string name="save">Salvar</string>
-    <string name="title_activity_add">AddActivity</string>
-    <string name="photo">Foto</string>
-    <string name="gallery">Galeria</string>
-    <string name="write_caption">Escreva uma descrição...</string>
-    <string name="share">compartilhar</string>
-    <string name="go">Avançar</string>
-    <string name="search">Pesquisar</string>
-    <string name="unfollow">Seguindo</string>
-    <string name="follow">Seguir</string>
-    <string name="logout">Deseja sair?</string>
-    <string name="logout_action">Sair</string>
-    <string name="cancel">Cancel</string>
+    <string android:name="photo_register_title">Adicionar foto do perfil</string>
+    <string android:name="take_picture">Tirar foto</string>
+    <string android:name="search_gallery">Escolher na Biblioteca</string>
+    <string android:name="define_photo_profile">Definir uma foto do perfil</string>
+    <string android:name="jump">Pular</string>
+    <string android:name="add_photo">Adicionar uma foto</string>
+    <string android:name="home">Home</string>
+    <string android:name="posts">publicações</string>
+    <string android:name="followers">seguidores</string>
+    <string android:name="following">seguindo</string>
+    <string android:name="edit_profile">Editar perfil</string>
+    <string android:name="username">username</string>
+    <string android:name="invalid_email">Email inválido</string>
+    <string android:name="password_not_equal">Senha e confirmar senha devem ser iguais.</string>
+    <string android:name="save">Salvar</string>
+    <string android:name="title_activity_add">AddActivity</string>
+    <string android:name="photo">Foto</string>
+    <string android:name="gallery">Galeria</string>
+    <string android:name="write_caption">Escreva uma descrição...</string>
+    <string android:name="share">compartilhar</string>
+    <string android:name="go">Avançar</string>
+    <string android:name="search">Pesquisar</string>
+    <string android:name="unfollow">Seguindo</string>
+    <string android:name="follow">Seguir</string>
+    <string android:name="logout">Deseja sair?</string>
+    <string android:name="logout_action">Sair</string>
+    <string android:name="cancel">Cancel</string>
 </resources>
